Use toList() instead of collect(toList())